recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:13: error: not found: value lenght
	avance(lenght)
               ^